{
  "version": 4,
  "terraform_version": "1.14.4",
  "serial": 51,
  "lineage": "e5f68ccb-e658-35b0-eb0a-9845b65645f5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "node-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08098d001e715d6af",
            "arn": "arn:aws:ec2:us-east-1:808850079759:elastic-ip/eipalloc-08098d001e715d6af",
            "association_id": "eipassoc-0c6aeb092d416c829",
            "domain": "vpc",
            "id": "eipalloc-08098d001e715d6af",
            "network_border_group": "us-east-1",
            "network_interface": "eni-09ae09dec9c91da43",
            "private_dns": "ip-10-0-0-165.ec2.internal",
            "private_ip": "10.0.0.165",
            "public_dns": "ec2-54-161-210-225.compute-1.amazonaws.com",
            "public_ip": "54.161.210.225",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "node-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808850079759:internet-gateway/igw-073fb14817144a086",
            "id": "igw-073fb14817144a086",
            "owner_id": "808850079759",
            "region": "us-east-1",
            "tags": {
              "Name": "node-gw"
            },
            "tags_all": {
              "Name": "node-gw"
            },
            "vpc_id": "vpc-0ec65f5ca3e52df58"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.node-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "node-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08098d001e715d6af",
            "association_id": "eipassoc-0c6aeb092d416c829",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-02a7e9133862c4898",
            "network_interface_id": "eni-09ae09dec9c91da43",
            "private_ip": "10.0.0.165",
            "public_ip": "54.161.210.225",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-07839b8eb947798d1",
            "tags": {
              "Name": "node-nat"
            },
            "tags_all": {
              "Name": "node-nat"
            },
            "vpc_id": "vpc-0ec65f5ca3e52df58"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.node-eip",
            "aws_internet_gateway.node-gw",
            "aws_subnet.public-subnet",
            "aws_vpc.node-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808850079759:route-table/rtb-0b756a11069af9493",
            "id": "rtb-0b756a11069af9493",
            "owner_id": "808850079759",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-02a7e9133862c4898",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-rt"
            },
            "tags_all": {
              "Name": "private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ec65f5ca3e52df58"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "808850079759",
            "id": "rtb-0b756a11069af9493",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.node-eip",
            "aws_internet_gateway.node-gw",
            "aws_nat_gateway.node-nat",
            "aws_subnet.public-subnet",
            "aws_vpc.node-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808850079759:route-table/rtb-0eb84b8db8d23bf4c",
            "id": "rtb-0eb84b8db8d23bf4c",
            "owner_id": "808850079759",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-073fb14817144a086",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-rt"
            },
            "tags_all": {
              "Name": "public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ec65f5ca3e52df58"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "808850079759",
            "id": "rtb-0eb84b8db8d23bf4c",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.node-gw",
            "aws_vpc.node-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-070796957497d0a38",
            "region": "us-east-1",
            "route_table_id": "rtb-0b756a11069af9493",
            "subnet_id": "subnet-03eafbc79f361a92a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.node-eip",
            "aws_internet_gateway.node-gw",
            "aws_nat_gateway.node-nat",
            "aws_route_table.private-rt",
            "aws_subnet.private-subnet",
            "aws_subnet.public-subnet",
            "aws_vpc.node-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f721b290235da782",
            "region": "us-east-1",
            "route_table_id": "rtb-0b756a11069af9493",
            "subnet_id": "subnet-014d95db8d870d3d5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.node-eip",
            "aws_internet_gateway.node-gw",
            "aws_nat_gateway.node-nat",
            "aws_route_table.private-rt",
            "aws_subnet.private-subnet",
            "aws_subnet.public-subnet",
            "aws_vpc.node-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02c143c7028637cd7",
            "region": "us-east-1",
            "route_table_id": "rtb-0eb84b8db8d23bf4c",
            "subnet_id": "subnet-07839b8eb947798d1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.node-gw",
            "aws_route_table.public-rt",
            "aws_subnet.public-subnet",
            "aws_vpc.node-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e3aa7fa50ca765d8",
            "region": "us-east-1",
            "route_table_id": "rtb-0eb84b8db8d23bf4c",
            "subnet_id": "subnet-07100c1c6940ac58b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.node-gw",
            "aws_route_table.public-rt",
            "aws_subnet.public-subnet",
            "aws_vpc.node-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_cluster_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808850079759:security-group/sg-00f768e5d9c2c2faa",
            "description": "Security group for EKS cluster",
            "egress": [],
            "id": "sg-00f768e5d9c2c2faa",
            "ingress": [],
            "name": "eks-cluster-sg",
            "name_prefix": "",
            "owner_id": "808850079759",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ec65f5ca3e52df58"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "808850079759",
            "id": "sg-00f768e5d9c2c2faa",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.node-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_node_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808850079759:security-group/sg-0987c081693c200ec",
            "description": "Nodes SG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0987c081693c200ec",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow worker nodes to communicate with cluster",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00f768e5d9c2c2faa"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "eks-node-sg",
            "name_prefix": "",
            "owner_id": "808850079759",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ec65f5ca3e52df58"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "808850079759",
            "id": "sg-0987c081693c200ec",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.eks_cluster_sg",
            "aws_vpc.node-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808850079759:subnet/subnet-03eafbc79f361a92a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03eafbc79f361a92a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "808850079759",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "private-subnet-0"
            },
            "tags_all": {
              "Name": "private-subnet-0"
            },
            "vpc_id": "vpc-0ec65f5ca3e52df58"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "808850079759",
            "id": "subnet-03eafbc79f361a92a",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.node-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808850079759:subnet/subnet-014d95db8d870d3d5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-014d95db8d870d3d5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "808850079759",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "private-subnet-1"
            },
            "tags_all": {
              "Name": "private-subnet-1"
            },
            "vpc_id": "vpc-0ec65f5ca3e52df58"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "808850079759",
            "id": "subnet-014d95db8d870d3d5",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.node-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808850079759:subnet/subnet-07839b8eb947798d1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07839b8eb947798d1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "808850079759",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "public-subnet-0"
            },
            "tags_all": {
              "Name": "public-subnet-0"
            },
            "vpc_id": "vpc-0ec65f5ca3e52df58"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "808850079759",
            "id": "subnet-07839b8eb947798d1",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.node-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808850079759:subnet/subnet-07100c1c6940ac58b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07100c1c6940ac58b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "808850079759",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "public-subnet-1"
            },
            "tags_all": {
              "Name": "public-subnet-1"
            },
            "vpc_id": "vpc-0ec65f5ca3e52df58"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "808850079759",
            "id": "subnet-07100c1c6940ac58b",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.node-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "node-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808850079759:vpc/vpc-0ec65f5ca3e52df58",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a43ee323cb95586e",
            "default_route_table_id": "rtb-0d2ebb8b44b65b35a",
            "default_security_group_id": "sg-0d97d58ecd0b0f18f",
            "dhcp_options_id": "dopt-00ae97a1b49548ec3",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ec65f5ca3e52df58",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d2ebb8b44b65b35a",
            "owner_id": "808850079759",
            "region": "us-east-1",
            "tags": {
              "Name": "node-vpc"
            },
            "tags_all": {
              "Name": "node-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "808850079759",
            "id": "vpc-0ec65f5ca3e52df58",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}